--- a/app/src/main/res/layout/layout_help.xml
+++ b/app/src/main/res/layout/layout_help.xml
@@ -7,12 +7,12 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <androidx.appcompat.widget.Toolbar
+        <ImageView
+            android:id="@+id/help_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:navigationIcon="?attr/homeAsUpIndicator"
-            android:id="@+id/toolbar"
-            />
+            android:src="@drawable/ic_baseline_arrow_back_24"
+            android:layout_margin="20dp"/>
     </LinearLayout>
     <TextView
         android:layout_width="match_parent"
